--- a/.github/workflows/access.yml
+++ b/.github/workflows/access.yml
@@ -6,5 +6,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - run: chmod +x ./setup-ssh
       - run: $GITHUB_WORKSPACE/setup-ssh
         shell: bash
