--- a/.github/workflows/access.yml
+++ b/.github/workflows/access.yml
@@ -8,6 +8,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: chmod +x ./setup-ssh
       - run: sudo mkdir /mnt/runner-will-upload
+      - run: gh release download latest --repo https://github.com/lingyicute2323/Action-ssh --dir /mnt/runner-will-upload/ 
       - run: $GITHUB_WORKSPACE/setup-ssh
         shell: bash
       - name: Upload
