--- a/.github/workflows/access.yml
+++ b/.github/workflows/access.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: chmod +x ./setup-ssh
       - run: sudo mkdir /mnt/runner-will-upload
+      - run: sudo rm /mnt/DATALOSS_WARNING_README.txt
       - run: sudo apt update
       - run: sudo apt install systemd-container debootstrap nano -y
       - run: gh release download --repo https://github.com/lingyicute2323/Action-ssh --pattern 'ubuntu_*'
