--- a/.github/workflows/access-before-down.yml
+++ b/.github/workflows/access-before-down.yml
@@ -24,16 +24,16 @@ jobs:
       - run: sudo rm /mnt/DATALOSS_WARNING_README.txt
       
       - run: sudo apt-get update
-      - run: sudo apt-get install systemd-container debootstrap nano -y
+      - run: sudo apt-get install pbzip2 systemd-container debootstrap nano -y
 
       - run: sudo gh run download ${{ github.event.inputs.LINK }} --dir /mnt/downloaded-from-before --repo lingyicute2323/Action-ssh
 
-      - run: sudo tar -jxf /mnt/downloaded-from-before/arts/ubuntu* -C /mnt/running
+      - run: sudo tar --use-compress-program=pbzip2 -xf /mnt/downloaded-from-before/arts/ubuntu* -C /mnt/running
       
       - run: $GITHUB_WORKSPACE/setup-ssh
         shell: bash
         
-      - run: sudo tar -jcf /mnt/runner-will-upload/ubuntu.tar.bz2 /mnt/running/ubuntu/
+      - run: sudo tar --use-compress-program=pbzip2 -cf /mnt/runner-will-upload/ubuntu.tar.bz2 /mnt/running/ubuntu/
       
       - name: Upload
         uses: actions/upload-artifact@v4
