--- a/.github/workflows/access-before-down.yml
+++ b/.github/workflows/access-before-down.yml
@@ -34,6 +34,9 @@ jobs:
         shell: bash
         
       - run: sudo tar --use-compress-program=pbzip2 -cf /mnt/runner-will-upload/ubuntu.tar.bz2 /mnt/running/ubuntu/
+
+      - run: sudo tree -L 2 /mnt
+      - run: sudo tree
       
       - name: Upload
         uses: actions/upload-artifact@v4
