--- a/.github/workflows/b.yml
+++ b/.github/workflows/b.yml
@@ -24,7 +24,7 @@ jobs:
       - run: sudo rm /mnt/DATALOSS_WARNING_README.txt
       
       - run: sudo apt-get update
-      - run: sudo apt-get install pbzip2 systemd-container debootstrap nano -y
+      - run: sudo apt-get install pv pbzip2 systemd-container debootstrap nano -y
 
       - run: sudo gh run download ${{ github.event.inputs.LINK }} --dir /mnt/downloaded-from-before --repo lingyicute2323/Action-ssh
  
