--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -5,14 +5,14 @@ env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - run: chmod +x ./setup-ssh
       - run: sudo mkdir /mnt/runner-will-upload
       - run: sudo rm /mnt/DATALOSS_WARNING_README.txt
       - run: sudo apt update
-      - run: sudo apt install systemd-container debootstrap nano -y
+      - run: sudo apt install nano -y
       - run: $GITHUB_WORKSPACE/setup-ssh
         shell: bash
       - name: Upload
