--- a/.github/workflows/VM.yml
+++ b/.github/workflows/VM.yml
@@ -2,7 +2,7 @@ name: CI download from before runner (vm)
 on:
   workflow_dispatch:
     inputs:
-      artifact-id:
+      LINK:
         description: 'download artifact from before runner id'
         required: true
         default: '12354801720'
@@ -32,7 +32,11 @@ jobs:
       - run: $GITHUB_WORKSPACE/setup-ssh
         shell: bash
 
-      - run: screen -S tarsession -X stuff "sudo -i\ncd /mnt/running\ntar --use-compress-program=pbzip2 -cf fedorakde.tar.bz2 fedorakde.qcow2"
+      - run: |
+         screen -dmS tarsession bash -c "cd /mnt/running && tar --use-compress-program=pbzip2 -cf fedorakde.tar.bz2 fedorakde.qcow2"
+         while screen -ls | grep -q tarsession; do
+            sleep 5
+         done
       - run: mv /mnt/running/fedorakde.tar.bz2 /mnt/runner-will-upload
       - name: Upload
         uses: actions/upload-artifact@v4
