--- a/.github/workflows/VM.yml
+++ b/.github/workflows/VM.yml
@@ -18,6 +18,8 @@ jobs:
       - run: rm ghtoken.txt
       
       - run: chmod +x ./setup-ssh
+      - run: chmod +x ./auto-tar
+      - run: chmod +x ./auto-unpack
       - run: sudo mkdir /mnt/runner-will-upload
       - run: sudo mkdir /mnt/running
       - run: sudo rm /mnt/DATALOSS_WARNING_README.txt
@@ -26,16 +28,14 @@ jobs:
       - run: sudo apt-get install pv pbzip2 nano qemu-kvm -y
 
       - run: sudo gh run download ${{ github.event.inputs.LINK }} --dir /mnt/running --repo lingyicute2323/Action-ssh
+
+      - run: sudo sh ./auto-unpack
  
       - run: $GITHUB_WORKSPACE/setup-ssh
         shell: bash
 
-      - run: |
-         screen -dmS tarsession bash -c "cd /mnt/running && tar --use-compress-program=pbzip2 -cf fedora.tar.bz2 fedora.qcow2"
-         while screen -ls | grep -q tarsession; do
-            sleep 5
-         done
-      - run: mv /mnt/running/fedora.tar.bz2 /mnt/runner-will-upload
+      - run: sudo sh ./auto-tar
+
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
