--- a/.github/workflows/VM.yml
+++ b/.github/workflows/VM.yml
@@ -25,7 +25,7 @@ jobs:
       - run: sudo rm /mnt/DATALOSS_WARNING_README.txt
       
       - run: sudo apt-get update
-      - run: sudo apt-get install pv pbzip2 nano qemu-kvm -y
+      - run: sudo apt-get install pbzip2 nano qemu-kvm -y
 
       - run: sudo gh run download ${{ github.event.inputs.LINK }} --dir /mnt/running --repo lingyicute2323/Action-ssh
 
