--- a/.github/workflows/VM.yml
+++ b/.github/workflows/VM.yml
@@ -20,16 +20,11 @@ jobs:
       - run: chmod +x ./setup-ssh
       - run: chmod +x ./auto-tar
       - run: chmod +x ./auto-unpack
-      - run: sudo mkdir /mnt/runner-will-upload
       - run: sudo mkdir /mnt/running
-      - run: sudo rm /mnt/DATALOSS_WARNING_README.txt
-      
-      - run: sudo apt-get update
-      - run: sudo apt-get install pbzip2 nano qemu-kvm -y
 
       - run: sudo gh run download ${{ github.event.inputs.LINK }} --dir /mnt/running --repo lingyicute2323/Action-ssh
 
-      - run: sudo sh ./auto-unpack
+      - run: sudo sh ./auto-patch-environment
  
       - run: $GITHUB_WORKSPACE/setup-ssh
         shell: bash
