--- a/.github/workflows/VM.yml
+++ b/.github/workflows/VM.yml
@@ -25,7 +25,9 @@ jobs:
       - run: sudo gh run download ${{ github.event.inputs.LINK }} --dir /mnt/running --repo lingyicute2323/Action-ssh
 
       - run: sudo sh ./auto-patch-environment
- 
+
+      - run: alias si='sudo -i'
+      
       - run: $GITHUB_WORKSPACE/setup-ssh
         shell: bash
 
