--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -1,4 +1,4 @@
-name: CI bare
+name: bare ssh
 on:
   workflow_dispatch:
 env:
@@ -9,6 +9,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: chmod +x ./setup-ssh
+      - run: echo ${{ secrets.GH_TOKEN }} > ghtoken.txt
+      - run: sudo gh auth login --with-token < ghtoken.txt
+      - run: rm ghtoken.txt
+      - run: sudo echo "alias c='cd /mnt'" >> ~/.bashrc
+      - run: alias s='sudo -i'
       - run: sudo mkdir /mnt/runner-will-upload
       - run: sudo rm /mnt/DATALOSS_WARNING_README.txt
       - run: sudo apt update
