--- a/.github/workflows/VM.yml
+++ b/.github/workflows/VM.yml
@@ -23,7 +23,7 @@ jobs:
       - run: chmod +x ./auto-patch-environment
       - run: sudo mkdir /mnt/running
       - run: sudo mv ./kvm /mnt/running/
-      - run: sudo chmod +x ./kvm
+      - run: chmod +x ./kvm
 
       - run: sudo gh run download ${{ github.event.inputs.LINK }} --dir /mnt/running --repo lingyicute2323/Action-ssh
 
