--- a/.github/workflows/VM.yml
+++ b/.github/workflows/VM.yml
@@ -31,6 +31,8 @@ jobs:
       - run: $GITHUB_WORKSPACE/setup-ssh
         shell: bash
 
+      - run: sudo apt-get install guestfs-tools -y
+
       - run: sudo sh ./auto-tar
 
       - name: Upload
