--- a/.github/workflows/VM.yml
+++ b/.github/workflows/VM.yml
@@ -31,7 +31,7 @@ jobs:
       - run: $GITHUB_WORKSPACE/setup-ssh
         shell: bash
 
-      - run: sudo apt-get install guestfs-tools -y
+      - run: sudo apt-get install guestfs-tools -y --no-install-recommends
 
       - run: sudo sh ./auto-tar
 
