Update bare-ssh.yml [no ci]

--- a/.github/workflows/bare-ssh.yml
+++ b/.github/workflows/bare-ssh.yml
@@ -9,13 +9,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: chmod +x ./setup-ssh
-      - run: echo ${{ secrets.GH_TOKEN }} > ghtoken.txt
-      - run: sudo gh auth login --with-token < ghtoken.txt
-      - run: rm ghtoken.txt
       - run: sudo mkdir /mnt/runner-will-upload
       - run: sudo rm -f /mnt/DATALOSS_WARNING_README.txt
       - run: sudo apt update
-      - run: sudo apt install qemu-kvm nano pbzip2 -y
+      - run: sudo apt install qemu-kvm nano -y
       - run: $GITHUB_WORKSPACE/setup-ssh
         shell: bash
       - name: Upload
